--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
   <title>G3 Architect</title>
   <link rel="stylesheet" href="styles/architect.css">
 </head>
-<body>
-  <header>
-    <nav>
-      
+<body class="work-sans-font">
+  <header class="bg-light">
+    <nav class="navbar display-flex">
+      <h3 class="brand">G3 Architects</h3>
+      <ul class="nav-links display-flex">
+        <!-- li.nav-items*4>a.nav-link -->
+        <li class="nav-items"><a href="" class="nav-link text-gray">Home</a></li>
+        <li class="nav-items"><a href="" class="nav-link text-gray">About</a></li>
+        <li class="nav-items"><a href="" class="nav-link text-gray">Contact Us</a></li>
+        <li class="nav-items"><a href="" class="nav-link text-gray">Login</a></li>
+      </ul>
     </nav>
+    <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+        <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reiciendis explicabo quos officia doloribus harum temporibus modi odit enim dolores.</p>
+        <button class="btn-primary">Explore More</button>
+      </div>
+      <img class="banner-image" src="images/banner.png" alt="">
+    </div>
   </header>
   <main>
 
