--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <button class="btn-primary">Explore More</button>
         </div>
       </section>
-      <!-- features section -->
+      <!-- some facts -->
       <section>
         <h3 class="section-title">Some facts</h3>
         <p class="text-light-gray">
@@ -101,8 +101,20 @@
         </div>
       </section>
 
-      <!-- Some facts -->
-      <section class="some-facts"></section>
+      <!-- Our Sponsors -->
+      <section class="our-sponsors">
+        <div class="sponsor-info">
+          <h3 class="sponsor-info">Our Sponsors</h3>
+          <p class="text-light-gray">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, dolor!</p>
+        </div>
+        <div class="sponsor-companies">
+          <img src="images/sponsors/amazon.png" alt="">
+          <img src="images/sponsors/figma.png" alt="">
+          <img src="images/sponsors/google.png" alt="">
+          <img src="images/sponsors/spotify.png" alt="">
+          <img src="images/sponsors/telerama.png" alt="">
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
